--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer 3 - Paana</title>
+  <title>Contribuer - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -94,6 +94,13 @@
       padding: 1.5rem;
       
     }
+
+    .events-column h4 {
+  color: var(--gray-dark);
+  text-decoration: underline;
+  margin-top: 2rem;
+  margin-bottom: 0.5rem;
+}
     .event {
       background: white;
       border-radius: 6px;
