--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer 1 - Paana</title>
+  <title>Contribuer 2 - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -94,6 +94,9 @@
       padding: 1.5rem;
       
     }
+    .event:hover {
+  background-color: #f0fdfd;
+}
 .titre-bloc {
   margin-top: 2rem;
   margin-bottom: 0.5rem;
@@ -105,13 +108,14 @@
   text-decoration: underline;
 }
 
-    .event {
-      background: white;
-      border-radius: 6px;
-      margin-bottom: 1rem;
-      padding: 1rem;
-      border-left: 4px solid var(--gray);
-    }
+  .event {
+  background: white;
+  border: 2px solid var(--primary);
+  border-radius: 6px;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+}
     .event.nearby {
       opacity: 0.6;
       font-style: italic;
