--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer 2 - Paana</title>
+  <title>Contribuer - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -120,11 +120,15 @@
       opacity: 0.6;
       font-style: italic;
     }
-    .event-date {
-      font-weight: bold;
-      color: var(--gray-dark);
-      min-width: 70px;
-    }
+   
+.event-date {
+  font-weight: bold;
+  color: var(--gray-dark);
+  min-width: 70px;
+  margin-bottom: 0.25rem;
+}
+
+    
     .pluriannuel-badge {
       display: inline-block;
       background-color: var(--primary);
@@ -241,18 +245,18 @@ fetch("events.json?" + Date.now())
   const bottom = document.getElementById("bloc-inferieur");
   top.innerHTML = center.innerHTML = bottom.innerHTML = "";
 
-  const makeEvent = (e, y, isContext) => {
-    const div = document.createElement("div");
-    div.className = "event" + (isContext ? " nearby" : "");
-    div.innerHTML = `
-      ${isContext ? `<div class="event-date">${y}</div>` : ""}
-      <div>
-<span>${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</span>
-        ${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}
-      </div>
-    `;
-    return div;
-  };
+ const makeEvent = (e, y, isContext) => {
+  const div = document.createElement("div");
+  div.className = "event" + (isContext ? " nearby" : "");
+  div.innerHTML = `
+    <div class="event-date">${isContext ? y : ""}</div>
+    <div>
+      ${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}
+      ${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}
+    </div>
+  `;
+  return div;
+};
 
   eventData.forEach(e => {
     if (e.start <= year && e.end >= year)
