--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer 3 - Paana</title>
+  <title>Contribuer 3- Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -35,7 +35,6 @@
       width: 100%;
       height: 2.5rem;
       font-size: 1rem;
-      padding: 0.2rem;
       background: none;
       border: none;
       text-align: center;
@@ -81,17 +80,67 @@
       overflow-y: scroll;
       background: white;
       border-right: 1px solid #ddd;
-      position: relative;
       scroll-behavior: smooth;
-      overscroll-behavior: contain;
       scrollbar-width: thin;
     }
     .events-column {
       width: 600px;
-      flex: 0 0 600px;
       background: var(--light);
       overflow-y: auto;
       padding: 1.5rem;
+    }
+
+    .event-box {
+      border: 2px solid var(--primary);
+      border-radius: 8px;
+      padding: 1rem;
+      background-color: white;
+      margin-bottom: 1.5rem;
+    }
+    .title-central {
+      margin: 0 0 1rem;
+      color: var(--text);
+      text-decoration: underline;
+      font-weight: bold;
+    }
+    .pluriannuel-badge {
+      display: inline-block;
+      background-color: var(--primary);
+      color: white;
+      font-size: 0.7rem;
+      padding: 2px 6px;
+      margin-left: 6px;
+      border-radius: 4px;
+    }
+
+    .collapsible-box {
+      border: 1px solid var(--gray);
+      border-radius: 6px;
+      padding: 0.8rem 1rem;
+      background-color: white;
+      margin-bottom: 1.5rem;
+      color: var(--gray-dark);
+    }
+    .collapsible-toggle {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      font-weight: bold;
+      user-select: none;
+    }
+    .collapsible-toggle i {
+      margin-right: 0.5rem;
+      transition: transform 0.3s ease;
+    }
+    .collapsible-content {
+      display: none;
+      margin-top: 0.5rem;
+    }
+    .collapsible-box.open .collapsible-content {
+      display: block;
+    }
+    .collapsible-box.open .collapsible-toggle i {
+      transform: rotate(90deg);
     }
     .events-column h5 {
       margin-bottom: 0.2rem;
@@ -106,81 +155,12 @@
     .events-column li {
       margin-bottom: 0.3rem;
     }
-
-    .collapsible-box {
-  border: 1px solid var(--gray);
-  border-radius: 6px;
-  padding: 0.8rem 1rem;
-  background-color: white;
-  margin-bottom: 1.5rem;
-  color: var(--gray-dark);
-}
-
-.collapsible-toggle {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  font-weight: bold;
-  margin-bottom: 0.5rem;
-  user-select: none;
-}
-
-.collapsible-toggle i {
-  margin-right: 0.5rem;
-  transition: transform 0.3s ease;
-}
-
-.collapsible-content {
-  display: none;
-  margin-top: 0.5rem;
-}
-
-.collapsible-box.open .collapsible-content {
-  display: block;
-}
-
-.collapsible-box.open .collapsible-toggle i {
-  transform: rotate(90deg);
-}
-
     .fiche-column {
       flex: 0 0 400px;
       background: #fff;
       padding: 1.5rem;
       border-left: 1px solid #ddd;
       overflow-y: auto;
-    }
-    .titre-bloc {
-      margin-top: 2rem;
-      margin-bottom: 0.5rem;
-      font-size: 1.1rem;
-    }
-    .titre-gris {
-      color: var(--gray-dark);
-      text-decoration: underline;
-    }
-    .event-box {
-      border: 2px solid var(--primary);
-      border-radius: 8px;
-      padding: 1rem;
-      background-color: white;
-      margin-bottom: 1.5rem;
-    }
-    .title-central {
-      margin-top: 0;
-      margin-bottom: 1rem;
-      color: var(--text);
-      text-decoration: underline;
-      font-weight: bold;
-    }
-    .pluriannuel-badge {
-      display: inline-block;
-      background-color: var(--primary);
-      color: white;
-      font-size: 0.7rem;
-      padding: 2px 6px;
-      margin-left: 6px;
-      border-radius: 4px;
     }
   </style>
 </head>
@@ -195,48 +175,49 @@
     <a href="a-propos.html">A PROPOS</a>
     <a href="contribuer.html">CONTRIBUER</a>
     <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
-    <a href="mailto:frise.sante.pf@gmail.com" title="Contacter par mail">
-      <i class="fas fa-envelope fa-lg"></i>
-    </a>
+    <a href="mailto:frise.sante.pf@gmail.com"><i class="fas fa-envelope fa-lg"></i></a>
   </nav>
 </header>
+
 <main>
   <div class="timeline-layout">
     <div class="years-container">
-      <button id="scroll-up" type="button">↑</button>
+      <button id="scroll-up">↑</button>
       <div class="years-column" id="years-column"></div>
-      <button id="scroll-down" type="button">↓</button>
+      <button id="scroll-down">↓</button>
     </div>
+
     <div class="events-column">
       <div id="loader" style="text-align:center; margin-top:3rem; font-style:italic;">Chargement...</div>
       <div id="message-attente" style="text-align:center; margin-top:3rem; font-style:italic; color:#666;">Aucun événement affiché. Sélectionnez une année dans la colonne de gauche.</div>
 
-      <h4 class="titre-bloc titre-gris">Événements antérieurs</h4>
-      <div id="bloc-superieur"></div>
+      <div class="collapsible-box" id="box-superieur">
+        <div class="collapsible-toggle" onclick="toggleCollapse('box-superieur')">
+          <i class="fas fa-chevron-right"></i> Événements antérieurs
+        </div>
+        <div class="collapsible-content" id="bloc-superieur"></div>
+      </div>
 
       <div class="event-box">
         <h4 class="title-central">Événements de l'année</h4>
         <div id="events-central-list"></div>
       </div>
 
-      <h4 class="titre-bloc titre-gris">Événements postérieurs</h4>
-      <div id="bloc-inferieur"></div>
+      <div class="collapsible-box" id="box-inferieur">
+        <div class="collapsible-toggle" onclick="toggleCollapse('box-inferieur')">
+          <i class="fas fa-chevron-right"></i> Événements postérieurs
+        </div>
+        <div class="collapsible-content" id="bloc-inferieur"></div>
+      </div>
     </div>
 
     <div class="fiche-column">
       <h3 id="fiche-titre">Détails</h3>
       <div id="fiche-content">Cliquez sur un événement pour voir sa fiche complète.</div>
-
-      <div class="collapsible-box" id="box-superieur">
-  <div class="collapsible-toggle" onclick="toggleCollapse('box-superieur')">
-    <i class="fas fa-chevron-right"></i>
-    Événements antérieurs
-  </div>
-  <div class="collapsible-content" id="bloc-superieur"></div>
-</div>
     </div>
   </div>
 </main>
+
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const yearCol = document.getElementById("years-column");
@@ -261,7 +242,6 @@ document.addEventListener("DOMContentLoaded", () => {
       });
 
       const yearButtons = document.querySelectorAll(".year-btn");
-
       yearButtons.forEach(btn => {
         btn.addEventListener("click", () => {
           yearButtons.forEach(b => b.classList.remove("active"));
@@ -270,9 +250,7 @@ document.addEventListener("DOMContentLoaded", () => {
         });
       });
 
-      if (yearButtons.length) {
-        yearButtons[0].click();
-      }
+      if (yearButtons.length) yearButtons[0].click();
 
       document.getElementById("scroll-up").addEventListener("click", () => scrollYear(-1));
       document.getElementById("scroll-down").addEventListener("click", () => scrollYear(1));
@@ -293,9 +271,8 @@ document.addEventListener("DOMContentLoaded", () => {
     const bottom = document.getElementById("bloc-inferieur");
     top.innerHTML = centerList.innerHTML = bottom.innerHTML = "";
 
-    const makeEventText = e => {
-      return `${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}`;
-    };
+    const makeEventText = e =>
+      `${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}`;
 
     eventData.forEach(e => {
       if (e.start <= year && e.end >= year) {
@@ -336,9 +313,10 @@ document.addEventListener("DOMContentLoaded", () => {
     document.getElementById("message-attente").style.display = totalEvents ? "none" : "block";
     document.getElementById("loader").style.display = "none";
   }
-  function toggleCollapse(id) {
-  const box = document.getElementById(id);
-  box.classList.toggle("open");
+
+  window.toggleCollapse = function(id) {
+    document.getElementById(id).classList.toggle("open");
+  };
 });
 </script>
 </body>
