--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer 3- Paana</title>
+  <title>Contribuer - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -193,7 +193,7 @@
 
       <div class="collapsible-box" id="box-superieur">
         <div class="collapsible-toggle" onclick="toggleCollapse('box-superieur')">
-          <i class="fas fa-chevron-right"></i> Événements antérieurs
+          <i class="fas fa-chevron-right"></i> Événements survenus dans les 2 années précédentes
         </div>
         <div class="collapsible-content" id="bloc-superieur"></div>
       </div>
@@ -205,7 +205,7 @@
 
       <div class="collapsible-box" id="box-inferieur">
         <div class="collapsible-toggle" onclick="toggleCollapse('box-inferieur')">
-          <i class="fas fa-chevron-right"></i> Événements postérieurs
+          <i class="fas fa-chevron-right"></i> Événements survenus dans les 2 années suivantes
         </div>
         <div class="collapsible-content" id="bloc-inferieur"></div>
       </div>
