--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer - Paana</title>
+  <title>Contribuer 1 - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -98,11 +98,12 @@
       margin-bottom: 1.5rem;
     }
     .title-central {
-      margin: 0 0 1rem;
-      color: var(--text);
-      text-decoration: underline;
-      font-weight: bold;
-    }
+  margin-top: 0;
+  margin-bottom: 1rem;
+  color: var(--primary); /* couleur bandeau */
+  font-weight: bold;
+  text-decoration: none; /* retire le souligné */
+}
     .pluriannuel-badge {
       display: inline-block;
       background-color: var(--primary);
