--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer 1 - Paana</title>
+  <title>Contribuer 3 - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -31,27 +31,6 @@
       margin: 0 auto;
       padding: 1.5rem 2rem;
     }
-    .year-btn {
-      width: 100%;
-      height: 2.5rem;
-      font-size: 1rem;
-      background: none;
-      border: none;
-      text-align: center;
-      cursor: pointer;
-      color: var(--text);
-      margin: 2px 0;
-      transition: background 0.2s, font-size 0.2s;
-    }
-    .year-btn:hover {
-      background-color: #fee58c;
-    }
-    .year-btn.active {
-      color: var(--primary);
-      font-weight: bold;
-      font-size: 1.3rem;
-      border-radius: 4px;
-    }
     .timeline-layout {
       display: flex;
       width: 100%;
@@ -63,25 +42,24 @@
       flex-direction: column;
       align-items: center;
     }
-    #scroll-up, #scroll-down {
-      width: 80px;
+    .year-btn {
+      width: 100%;
       height: 2.5rem;
-      font-size: 1.2rem;
-      border: 1px solid var(--gray);
-      background: white;
+      font-size: 1rem;
+      background: none;
+      border: none;
+      text-align: center;
       cursor: pointer;
+      color: var(--text);
     }
-    #scroll-up:hover, #scroll-down:hover {
-      background: #eee;
+    .year-btn:hover {
+      background-color: #fee58c;
     }
-    .years-column {
-      width: 80px;
-      height: calc(2.5rem * 10);
-      overflow-y: scroll;
-      background: white;
-      border-right: 1px solid #ddd;
-      scroll-behavior: smooth;
-      scrollbar-width: thin;
+    .year-btn.active {
+      color: var(--primary);
+      font-weight: bold;
+      font-size: 1.3rem;
+      border-radius: 4px;
     }
     .events-column {
       width: 600px;
@@ -89,7 +67,6 @@
       overflow-y: auto;
       padding: 1.5rem;
     }
-
     .event-box {
       border: 2px solid var(--primary);
       border-radius: 8px;
@@ -98,226 +75,124 @@
       margin-bottom: 1.5rem;
     }
     .title-central {
-  margin-top: 0;
-  margin-bottom: 1rem;
-  color: var(--primary); /* couleur bandeau */
-  font-weight: bold;
-  text-decoration: none; /* retire le souligné */
-}
-    .pluriannuel-badge {
-      display: inline-block;
-      background-color: var(--primary);
-      color: white;
-      font-size: 0.7rem;
-      padding: 2px 6px;
-      margin-left: 6px;
+      color: var(--primary);
+      margin: 0 0 1rem;
+      font-weight: bold;
+    }
+    .event {
+      margin-bottom: 1rem;
+      padding: 0.5rem;
+      background-color: white;
+      border-left: 4px solid var(--gray);
       border-radius: 4px;
     }
-
-    .collapsible-box {
-      border: 1px solid var(--gray);
-      border-radius: 6px;
-      padding: 0.8rem 1rem;
-      background-color: white;
-      margin-bottom: 1.5rem;
-      color: var(--gray-dark);
-    }
-    .collapsible-toggle {
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      font-weight: bold;
-      user-select: none;
-    }
-    .collapsible-toggle i {
+    .event i {
       margin-right: 0.5rem;
-      transition: transform 0.3s ease;
+      color: var(--primary);
     }
-    .collapsible-content {
-      display: none;
-      margin-top: 0.5rem;
-    }
-    .collapsible-box.open .collapsible-content {
-      display: block;
-    }
-    .collapsible-box.open .collapsible-toggle i {
-      transform: rotate(90deg);
-    }
-    .events-column h5 {
-      margin-bottom: 0.2rem;
-      color: var(--gray-dark);
-      font-weight: bold;
-      text-decoration: underline;
-    }
-    .events-column ul {
-      margin-top: 0;
-      padding-left: 1.2rem;
-    }
-    .events-column li {
-      margin-bottom: 0.3rem;
-    }
-    .fiche-column {
-      flex: 0 0 400px;
-      background: #fff;
-      padding: 1.5rem;
-      border-left: 1px solid #ddd;
-      overflow-y: auto;
+    .pluriannuel-badge {
+      background-color: var(--primary);
+      color: white;
+      padding: 2px 6px;
+      font-size: 0.7rem;
+      border-radius: 4px;
+      margin-left: 6px;
     }
   </style>
 </head>
 <body>
-<header>
-  <div class="logo">
-    <span class="brand">Paana</span>
-    <div class="trait"></div>
-    <div class="signature">Emmanuelle RUPP-TERRIS</div>
-  </div>
-  <nav>
-    <a href="a-propos.html">A PROPOS</a>
-    <a href="contribuer.html">CONTRIBUER</a>
-    <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
-    <a href="mailto:frise.sante.pf@gmail.com"><i class="fas fa-envelope fa-lg"></i></a>
-  </nav>
-</header>
-
 <main>
   <div class="timeline-layout">
     <div class="years-container">
-      <button id="scroll-up">↑</button>
-      <div class="years-column" id="years-column"></div>
-      <button id="scroll-down">↓</button>
+      <button id="scroll-up">&#x25B2;</button>
+      <div id="years-column"></div>
+      <button id="scroll-down">&#x25BC;</button>
     </div>
-
     <div class="events-column">
-      <div id="loader" style="text-align:center; margin-top:3rem; font-style:italic;">Chargement...</div>
-      <div id="message-attente" style="text-align:center; margin-top:3rem; font-style:italic; color:#666;">Aucun événement affiché. Sélectionnez une année dans la colonne de gauche.</div>
-
-      <div class="collapsible-box" id="box-superieur">
-        <div class="collapsible-toggle" onclick="toggleCollapse('box-superieur')">
-          <i class="fas fa-chevron-right"></i> Événements survenus dans les 2 années précédentes
-        </div>
-        <div class="collapsible-content" id="bloc-superieur"></div>
-      </div>
-
       <div class="event-box">
         <h4 class="title-central">Événements de l'année</h4>
         <div id="events-central-list"></div>
       </div>
-
-      <div class="collapsible-box" id="box-inferieur">
-        <div class="collapsible-toggle" onclick="toggleCollapse('box-inferieur')">
-          <i class="fas fa-chevron-right"></i> Événements survenus dans les 2 années suivantes
-        </div>
-        <div class="collapsible-content" id="bloc-inferieur"></div>
-      </div>
-    </div>
-
-    <div class="fiche-column">
-      <h3 id="fiche-titre">Détails</h3>
-      <div id="fiche-content">Cliquez sur un événement pour voir sa fiche complète.</div>
     </div>
   </div>
 </main>
-
 <script>
+const categoryIconMap = {
+  "Éducation": "fa-graduation-cap",
+  "Nutrition": "fa-apple-alt",
+  "Infrastructure": "fa-tools",
+  "Législation": "fa-scale-balanced",
+  "Communication": "fa-bullhorn",
+  "Vaccination": "fa-syringe",
+  "Financement": "fa-euro-sign",
+  "Technologie": "fa-microchip",
+  "Hygiène": "fa-soap",
+  "Recherche": "fa-flask",
+  "Ressources humaines": "fa-user-md",
+  "Santé publique": "fa-notes-medical",
+  "Environnement": "fa-leaf"
+};
+
+function themeToColor(theme) {
+  const hash = Array.from(theme).reduce((a, c) => a + c.charCodeAt(0), 0);
+  const hue = hash % 360;
+  return `hsl(${hue}, 60%, 70%)`;
+}
+
 document.addEventListener("DOMContentLoaded", () => {
   const yearCol = document.getElementById("years-column");
+  const eventList = document.getElementById("events-central-list");
   let eventData = [];
 
-  fetch("events.json?" + Date.now())
+  fetch("events.json")
     .then(res => res.json())
     .then(data => {
-      if (!Array.isArray(data)) throw new Error("Format JSON invalide.");
       eventData = data;
-
-      const years = [...new Set(data.flatMap(e =>
-        Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i)
-      ))].sort((a, b) => a - b);
+      const years = [...new Set(data.flatMap(e => Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i)))].sort((a, b) => a - b);
 
       years.forEach(year => {
         const btn = document.createElement("button");
         btn.className = "year-btn";
         btn.textContent = year;
         btn.dataset.year = year;
+        btn.addEventListener("click", () => {
+          document.querySelectorAll(".year-btn").forEach(b => b.classList.remove("active"));
+          btn.classList.add("active");
+          renderEvents(parseInt(year));
+        });
         yearCol.appendChild(btn);
       });
 
-      const yearButtons = document.querySelectorAll(".year-btn");
-      yearButtons.forEach(btn => {
-        btn.addEventListener("click", () => {
-          yearButtons.forEach(b => b.classList.remove("active"));
-          btn.classList.add("active");
-          renderEvents(parseInt(btn.dataset.year));
-        });
-      });
-
-      if (yearButtons.length) yearButtons[0].click();
+      if (years.length) document.querySelector(".year-btn").click();
 
       document.getElementById("scroll-up").addEventListener("click", () => scrollYear(-1));
       document.getElementById("scroll-down").addEventListener("click", () => scrollYear(1));
 
       function scrollYear(offset) {
-        const currentIndex = [...yearButtons].findIndex(btn => btn.classList.contains("active"));
-        const newIndex = currentIndex + offset;
-        if (newIndex >= 0 && newIndex < yearButtons.length) {
-          yearButtons[newIndex].click();
-          yearButtons[newIndex].scrollIntoView({ behavior: "smooth", block: "center" });
-        }
+        const buttons = [...document.querySelectorAll(".year-btn")];
+        const current = buttons.findIndex(b => b.classList.contains("active"));
+        const target = current + offset;
+        if (buttons[target]) buttons[target].click();
       }
     });
 
   function renderEvents(year) {
-    const top = document.getElementById("bloc-superieur");
-    const centerList = document.getElementById("events-central-list");
-    const bottom = document.getElementById("bloc-inferieur");
-    top.innerHTML = centerList.innerHTML = bottom.innerHTML = "";
-
-    const makeEventText = e =>
-      `${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}`;
-
+    eventList.innerHTML = "";
     eventData.forEach(e => {
       if (e.start <= year && e.end >= year) {
         const div = document.createElement("div");
-        div.innerHTML = makeEventText(e);
-        centerList.appendChild(div);
+        div.className = "event";
+        const icon = categoryIconMap[e.maincat] || "fa-circle";
+        div.style.borderLeft = `4px solid ${themeToColor(e.themes.split(",")[0].trim())}`;
+        div.innerHTML = `
+          <i class="fas ${icon}"></i>
+          ${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}
+          ${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}
+        `;
+        eventList.appendChild(div);
       }
     });
-
-    const groupByYear = (from, to) => {
-      const map = {};
-      for (let y = from; y <= to; y++) {
-        const evts = eventData.filter(e => (e.start === e.end && e.start === y) || (e.start <= y && e.end >= y));
-        if (evts.length) map[y] = evts;
-      }
-      return map;
-    };
-
-    const renderContextual = (container, map) => {
-      for (const [y, events] of Object.entries(map)) {
-        const title = document.createElement("h5");
-        title.textContent = y;
-        container.appendChild(title);
-        const ul = document.createElement("ul");
-        events.forEach(e => {
-          const li = document.createElement("li");
-          li.innerHTML = makeEventText(e);
-          ul.appendChild(li);
-        });
-        container.appendChild(ul);
-      }
-    };
-
-    renderContextual(top, groupByYear(year - 2, year - 1));
-    renderContextual(bottom, groupByYear(year + 1, year + 2));
-
-    const totalEvents = top.children.length + centerList.children.length + bottom.children.length;
-    document.getElementById("message-attente").style.display = totalEvents ? "none" : "block";
-    document.getElementById("loader").style.display = "none";
   }
-
-  window.toggleCollapse = function(id) {
-    document.getElementById(id).classList.toggle("open");
-  };
 });
 </script>
 </body>
