--- a/contribuer.html
+++ b/contribuer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contribuer - Paana</title>
+  <title>Contribuer 2- Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
   <link href="header-footer.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -266,12 +266,12 @@ document.addEventListener("DOMContentLoaded", () => {
   : '';
       const themeColor = stringToColor(e.themes || "");
       return `
-        <div class="event" style="border-left: 5px solid ${themeColor}">
-          <div>
-            ${icon}${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}
-            ${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}
-          </div>
-        </div>
+  <div class="event" style="border-left: 5px solid ${themeColor}; padding-left: 0.6rem;">
+    <div>
+      ${icon}&nbsp;&nbsp;${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}
+      ${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}
+    </div>
+  </div>
       `;
     };
 
